# Async-Web-Communicator

./: .gitignore  CMakeLists.txt  Makefile  README.md  exec
src/: AWC.cpp  AWC.hpp  client_interface.cpp  client_interface.hpp  connection.cpp  connection.hpp  connection_client_side.cpp  connection_client_side.hpp  connection_server_side.cpp  connection_server_side.hpp  free_functions.cpp  free_functions.hpp  interface.cpp  interface.hpp  main.cpp  messages_section.cpp  messages_section.hpp  safeQueue.cpp  safeQueue.hpp  safeVector.cpp  safeVector.hpp  section.cpp  section.hpp  server_interface.cpp  server_interface.hpp  write_section.cpp  write_section.hpp
tests/: test1.cpp
